# agent-pitfalls-cn

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.en.md  README.ja.md  README.md  astro.config.mjs  install.sh  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.mjs
.github/workflows/: ci.yml
agent_pitfalls_cli/: README-CLI.md  __init__.py  __main__.py  cli.py  index.py  search.py  tokenize.py
agent_pitfalls_cli/tests/: test_cli.py  test_index.py  test_search.py  test_tokenize.py
collectors/: README.md  SOURCES.md  __init__.py  base.py  dedupe.py  dedupe_v2.py  emit.py  normalize.py  run_all.py
collectors/sources/: __init__.py  _http.py  arxiv.py  arxiv_v2.py  awesome.py  bilibili.py  brave_search.py  cloud_cn.py  cnblogs.py  communities.py  csdn.py  dev_community.py  devto.py  discord_hn_reddit.py  extra_en.py  feed_aggregator.py  forums.py  frameworks.py  github_issues.py  github_releases.py  google_news.py  hackernews.py  huggingface.py  infoq_cn.py  juejin.py  (+31 more)
docs/: RFC.md  SCHEMA.md  UI-components.md  UI-pages.md  UI.md
marketing/: launch.md
plugin/: README.md  gemini-extension.json  opencode.json
scripts/: _test_collectors.py  backfill_pitfalls.py  batch_a.py  batch_d.py  build-search-index.mjs  build_vue_manifest.py  fix_pitfall_urls.py  fix_round4_schema.py  loop_fix_and_build.py  merge_all_dedup.py  merge_all_raw.py  merge_raw.py  merge_round4.py  merge_round7.py  mirror-dist.mjs  quick_collect.py  round5_safe.py  yaml_quote_all.py
skills/: README.md
vue/: index.html  package-lock.json  package.json  vite.config.js
web/: .dev.tmp
(+8003 files in other folders)
