[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-pitfalls"
version = "0.1.0"
description = "在开发期即时查询 AI agent 避坑知识 — CLI 工具，支持 Claude Code / Codex / OpenCode / Gemini CLI 插件集成"
readme = "README-CLI.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "wiselinpm" }]
keywords = [
  "agent", "llm", "ai", "pitfalls", "rag", "tool-use",
  "prompt-injection", "claude-code", "openai-agents", "langchain",
  "mcp", "cli-plugin",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
agent-pitfalls = "agent_pitfalls_cli.cli:main"
apf = "agent_pitfalls_cli.cli:main"

[project.urls]
Homepage = "https://github.com/wiselinpm/agent-pitfalls-cn"
Issues = "https://github.com/wiselinpm/agent-pitfalls-cn/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_pitfalls_cli*"]

[tool.setuptools.package-data]
agent_pitfalls_cli = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["agent_pitfalls_cli/tests"]
addopts = "-ra -q"